# ChangeLog for games-board/tablebase-nalimov
# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2

*tablebase-nalimov-0_pre20131213 (09 Mar 2017)

  09 Mar 2017; Ulrich Müller <ulm@gentoo.org>
  -egtb-nalimov-20131213.ebuild, +tablebase-nalimov-0_pre20131213.ebuild:
  Package move. Change to conventional versioning scheme.

  08 Oct 2015; Ulrich Müller <ulm@gentoo.org> egtb-nalimov-20131213.ebuild:
  Calculation of SRC_URI refurbished.

  01 Oct 2015; Ulrich Müller <ulm@gentoo.org> egtb-nalimov-20131213.ebuild:
  Install under /usr/share/ instead of /usr/share/games/.

*egtb-nalimov-20131213 (28 Sep 2015)

  28 Sep 2015; Ulrich Müller <ulm@gentoo.org> +egtb-nalimov-20131213.ebuild,
  +metadata.xml:
  Package move from tablebase to egtb-nalimov.

  27 Mar 2014; Ulrich Müller <ulm@gentoo.org> tablebase-20121127.ebuild:
  Inherit check-reqs.eclass and check for disk space requirements.

*tablebase-20121127 (27 Mar 2014)

  27 Mar 2014; Ulrich Müller <ulm@gentoo.org> +tablebase-20121127.ebuild,
  +metadata.xml:
  Initial import. Ebuild contributed by me.
