@@ -5,6 +5,6 @@
   <email>ulm@gentoo.org</email>
 </maintainer>
 <use>
-  <flag name='tb5'>Install 5 pieces tablebases</flag>
+  <flag name='5-pieces'>Install 5 pieces tablebases</flag>
 </use>
 </pkgmetadata>
